2005-01-13  Francois Dumont  <dums@stlport...>

	* stlport/stl/_algobase.h: Improvment of the iter_swap algo to use the swap
	method when possible thanks David Abrahams and Aleksey Gurtovoy great book
	introduction.

	* stlport/stl/_alloc.h: Deactivation of the lock free allocator implementation
	not mature enough to be release yet.
	
	* stlport/stl/_uninitialized.h: Fix of non Standard algo signature:
			- uninitialized_fill_n
			
	*stlport/stl/_iterator_base.h: Fix of non Standard algo signature:
			- distance
			
	* stlport/stl/_algobase.h: Fix of non Standard algo signature:
			- fill_n
			
	* stlport/stl/_algo.h: Fix of non Standard algo signature:
			- rotate
			- generate_n
			
	* stlport/stl/_string.h, debug/_string.h: Fix of the non Standard basic_string
	default constructor.
			
	*stlport/stl/_algobase.h, _function.h, _iterator_base.h, _move_construct_fwk.h, 
	_ptr_specialize.h, char_traits.h, debug/_debug.h: Fix of the macro name check 
	before including type_traits.h.
	
2005-01-08  Francois Dumont  <dums@stlport...>

	* stlport/stl/_codecvt.h: Add of a missing export declaration for the wchar_t
	specialization of the codecvt_byname class.

	* src/stlport.rc: improvement of the information included in the ressource file.
	Especially add of the compiler options.

	* stlport/stl/_stlport_version.h: Creation of a special file containing all the
	version informations; very usefull to avoid problem with the ressource compiler.

	* stlport/stl/_config.h: Removal of the unused _STLP_USING_VENDOR_STD macro.
	Inclusion of the _stlport_version.h file. Update of the comment explaining why
	_STLP_USE_DECLSPEC is undefined when user do not use iostreams.

	* build/Makefiles/nmake/vc-common.mak, evc-common.mak, gmake/gcc.mak: Improvement
	of the ressource compiler options.

2005-01-06  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_msvc.h: Move the _STLP_DONT_RETURN_VOID configuration
	macro to the specific MSVC6 compiler as it is the only one that has ever