@@ -20,7 +20,7 @@ INCLUDES=$(INCLUDES) /I "$(STLPORT_INCLUDE_DIR)" /FI "vc_warning_disable.h"
 LDSEARCH=$(LDSEARCH) /LIBPATH:$(STLPORT_LIB_DIR)
 RC_FLAGS_REL = /I "$(STLPORT_INCLUDE_DIR)" /D "COMP=$(COMPILER_NAME)"
 RC_FLAGS_DBG = /I "$(STLPORT_INCLUDE_DIR)" /D "COMP=$(COMPILER_NAME)"
-RC_FLAGS_STLDBG = /I "$STLPORT_INCLUDE_DIR)" /D "COMP=$(COMPILER_NAME)"
+RC_FLAGS_STLDBG = /I "$(STLPORT_INCLUDE_DIR)" /D "COMP=$(COMPILER_NAME)"
 OPT_STLDBG = /Zm800
 OPT_STLDBG_STATIC = /Zm800
 
