@@ -20,6 +20,7 @@ DEFS_STATIC_STLDBG = /D_STLP_USE_STATIC_LIB
 INCLUDES=$(INCLUDES) /I "$(STLPORT_INCLUDE_DIR)" /FI "vc_warning_disable.h"
 
 !ifdef STLP_BUILD_BOOST_PATH
+OPT_DBG = /Zm800
 INCLUDES=$(INCLUDES) /I "$(STLP_BUILD_BOOST_PATH)"
 !endif
 
