@@ -283,7 +283,7 @@ typedef char __stl_char;
 #  undef _STLP_NO_CUSTOM_IO
 #endif
 
-#if !defined (__BUILDING_STLPORT) && !defined (_STLP_NO_IOSTREAMS) && defined (_STLP_USE_AUTO_LINK)
+#if !defined (__BUILDING_STLPORT) && !defined (_STLP_NO_IOSTREAMS) && !defined (_STLP_DONT_USE_AUTO_LINK)
 
 #  define _STLP_STRINGIZE(X) _STLP_STRINGIZE_AUX(X)
 #  define _STLP_STRINGIZE_AUX(X) #X
@@ -317,7 +317,7 @@ typedef char __stl_char;
 #  undef _STLP_STRINGIZE_AUX
 #  undef _STLP_STRINGIZE
 
-#endif /* _STLP_USE_AUTO_LINK */
+#endif /* _STLP_DONT_USE_AUTO_LINK */
 
 // Local Variables:
 // mode:C++
