@@ -36,7 +36,12 @@
 #    endif /* std */
 #    define std STLPORT
 #  endif /* _STLP_DONT_REDEFINE_STD */
-#  define stlport STLPORT
+
+#  if defined (_STLP_USE_NAMESPACES)
+//Here we don't use a macro as stlport is used as file name by boost and folder name under beos:
+namespace stlport = STLPORT;
+#  endif
+
 #endif
 
 #undef _STLP_PROLOG_HEADER_INCLUDED /* defined in _prolog.h */
