@@ -32,7 +32,8 @@
 #  else
 // This section serves as a replacement for windows.h header for Visual C++
 extern "C" {
-#  if (defined(_M_MRX000) || defined(_M_ALPHA) || (defined(_M_PPC) && (_MSC_VER >= 1000))) && !defined(RC_INVOKED)
+#  if (defined(_M_AMD64) || defined(_M_IA64) || defined(_M_MRX000) || defined(_M_ALPHA) || \
+      (defined(_M_PPC) && (_MSC_VER >= 1000))) && !defined(RC_INVOKED)
 #    define InterlockedIncrement       _InterlockedIncrement
 #    define InterlockedDecrement       _InterlockedDecrement
 #    define InterlockedExchange        _InterlockedExchange
